added comments and alt tags on images

--- a/anna.html
+++ b/anna.html
@@ -16,7 +16,7 @@
 
     
     <div>
-         <img src="Princess-Anna1.png" 
+         <img src="Princess-Anna1.png" Alt="A photo of Anna"
          />
     </div> 
 
