--- a/elsa.html
+++ b/elsa.html
@@ -17,7 +17,7 @@
     </div>
 
     <div>
-        <img src="Elsa_from_Disney's_Frozen.png" 
+        <img src="Elsa_from_Disney's_Frozen.png" alt="A photo of Elsa"
         />
      </div> 
 
