--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  </div><!--this it the code i used to get from one page to another-->
 
   <div>
-     <img src="frozen_sisters.webp" 
+     <img src="frozen_sisters.webp" alt="Photo of the frozen sisters Elsa and Anna" 
     />
   </div> <!--how to get and size the image-->
 
